<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/nigeria"/>

        <LinearLayout
            android:id="@+id/question_1_container"
            style="@style/question_container_style"
            >

            <TextView
                style="@style/question_style"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/question_1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/question_1_first_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="1961"
                    />

                <RadioButton
                    android:id="@+id/question_1_second_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="1960" />

                <RadioButton
                    android:id="@+id/question_1_third_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="1959" />
            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/question_2_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/question_2_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_2_first_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="Dr.Nnamdi Azikiwe" />

                <RadioButton
                    android:id="@+id/question_2_second_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="Olusegun Obasanjo" />

                <RadioButton
                    android:id="@+id/question_2_third_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="Alvan Ikoku" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_3_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_first_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="White" />


                </LinearLayout>

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_second_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="Green" />


                </LinearLayout>

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_third_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="Red" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_4_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_4" />


            <EditText
                android:id="@+id/question_4_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/question_5_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_5" />

            <RadioGroup
                android:id="@+id/question_5_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_5_first_radio"
                    style="@style/question_radio_button_style"
                    android:text="Mosquito" />

                <RadioButton
                    android:id="@+id/question_5_second_radio"
                    style="@style/question_radio_button_style"
                    android:text="Ant" />

                <RadioButton
                    android:id="@+id/question_5_third_radio"
                    style="@style/question_radio_button_style"
                    android:text="Butterfly" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_6_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_6" />


            <EditText
                android:id="@+id/question_6_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_7_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_7" />

            <ImageView
                android:id="@+id/question_7_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/udacity_logo" />

            <EditText
                android:id="@+id/question_7_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkQuiz"
            android:text="Submit" />
    </LinearLayout>
</ScrollView>
